--- a/writeup/research_design.tex
+++ b/writeup/research_design.tex
@@ -1,3 +1,4 @@
+
 \subsection{Measuring the main dependent variable: spillover effect}
 
 \subsubsection*{Measuring spillover indirectly}
@@ -84,21 +85,8 @@ Operationalization of independent variables:
 \item Corruption: can be measured in two ways. 1) Firms' perception about corruption as an obstacle. This measure is frequently used but not accurate since firms' perception of corruption depends not only on the level of corruption but also the characteristics of firms. 2) Hard measure of prevalence and depth of bribes, e.g. ``Was an informal payment expected or request (when applying for a license)?'', ``How much do establishments like this one give in informal payments?'' 
 \end{itemize}
 
-\subsection{Vietnam case study: addressing issues of endogeneity and measurement error of corruption}
 
-In the cross national design, the corruption variable is problematic for two reasons. First, corruption, due to its complex institutional causes, is likely to be endogenous to a host of unobserved factors that also affect spillover. Second, a direct measure of corruption tends to suffer from sensitivity bias. In this section, I address both of these issues in turn, using 1) an exogenous shock to the level of corruption in Vietnam following the Phase 3 (Enforcement) of the OECD's anti-bribery convention in 2009, and 2) data from a list experiment by \citet{Malesky2015} to measure corruption.
-
-\subsubsection*{Phase 3 of OECD Anti-Cribery Convention (ABC) as an exogenous shock}
-
-In December 1997, all members of OECD and an additional five non-members, accounting for nearly 61\% of world trade, signed the ABC. The ABC criminalizes the bribery of foreign public officials and upholds its principles with a peer-monitoring system, in which member countries visit and review one another's legislation and implementation. According to legal experts, these reports are often quite harsh and effective in shaming countries into improving their practices \citep{Tyler2011}.
-
-Important for my research design, in December 2009 the OECD's Working Group on Bribery (WGB) annouced that following Phase 1 and 2 (Evaluation and Assessment) there would be a Phase 3 (Enforcement). The goal of Phase 3 is to continually monitor countries' anti-bribery practices and to exhort inactive enforcers. Noticeably, Phase 3 also removed a previous exception that allowed firms to make ``small facilitation payment'' \citep{Strauss2013}. Researchers have argued that following the announcement of Phase 3, member countries ramped up enforcement to avoid a negative review, and causing their firms to reduce bribery abroad \citep{Malesky2015b}. 
-
-Given that FDI to Vietnam only accounts for a small fraction of OECD countries' total foreign investment, it is plausible that Vietnam is not a major factor driving the initiation of Phase 3. Therefore, the announcement of Phase 3 serves as an exogenous shock to the level of corruption in Vietnam. With OECD firms being reluctant to offer bribes, we expect corrupt officials to become uninterested in OECD firms. Post 2009, OECD firms would be attractive only to non-corrupt officials for their developmental impact, and we should observe them having more spillover effect.
-
-With 2009 as an exogenous shock we have a difference-in-difference design. First, we estimate the difference in spillover between OECD and non-OECD firms, pre-2009. We then find the same difference in spillover post-2009. Subtracting these two differences, we can estimate the effect of corruption on the level of spillover.
-
-\subsubsection*{List experiment to better measure corruption}
+\subsection{OECD ABC and List experiment to better measure corruption}
 
 As mentioned earlier, despite the wealth of firm-level, cross-national data in the ES dataset, its measure of corruption is still plagued by a host of measurement issues. 
 
@@ -123,6 +111,12 @@ Operationalization of independent variables:
 	\item appearance in centrally controlled newspapers as a proxy for the decision to pursue promotion
 \end{itemize}
 \end{itemize}
+
+
+\subsection{Vietnam case study: addressing issues of endogeneity and measurement error of corruption}
+
+In the cross national design, the corruption variable is problematic for two reasons. First, corruption, due to its complex institutional causes, is likely to be endogenous to a host of unobserved factors that also affect spillover. Second, a direct measure of corruption tends to suffer from sensitivity bias. In this section, I address both of these issues in turn, using 1) an exogenous shock to the level of corruption in Vietnam following the Phase 3 (Enforcement) of the OECD's anti-bribery convention in 2009, and 2) data from a list experiment by \citet{Malesky2015} to measure corruption.
+
 
 \subsection{Conjoint analysis of Vietnamese officials' preference}
 
