--- a/writeup/trade_off.tex
+++ b/writeup/trade_off.tex
@@ -1,54 +1,91 @@
-\subsection{Budget constraint}
+\subsection{Actor and choice between spillover and private benefit}
 
-In order to attract FDI, the government official offers foreign firms with benefits such as market size or cheap labor. These resources are finite, thus imposing a budget constraint on the FDI that the official can attract.
+The model has one strategic actor: a government official. This official has control over a certain endowment (e.g. market size, cheap labor) that is attractive to foreign firms.\footnote{I define  \textit{foreign firms} as firms with over 50\% ownership belonging to private foreign individuals, companies, or organizations} Foreign firms that invest in the official's territory turn this endowment into profit via their productive activities. Firms then share the value added with the official in exchange for access to the endowment. 
 
-When considering a FDI project, the government official decides between two benefits that the project may bring, i.e. technological spillover and private benefits. While there are other benefits to FDI, such as employment generation and capital, technological spillover is crucial to the improvement in total factor productivity, an ingredient of economic growth. Private benefits of FDI to government officials can be either illegal (e.g. bribes) or legal (e.g. informal network with foreign firms that leads to contracts for friends and families, campaign finance contribution).
- 
-There is a trade-off between these two benefits. To encourage technological spillover, governments frequently impose conditions on foreign firms, such as forming a joint venture or local content requirement. These requirements constrain the ability of firms to use their physical and management capital optimally, reducing the efficiency and thus profitability of firms. Similarly, when firms are forced to offer private benefits to officials (e.g. bribes, contracts with officials' relatives), it introduces both an upfront cost as well as the cost of uncertainty (as these private benefits are informal and not encoded transparently). Therefore, offering officials private benefits also reduces the profitability of firms. Given that firms themselves have to maintain a minimum amount of profitability (akin to reservation wage), when they offer one type of benefits they would have to reduce the others. Therefore, if the government official demands one type of benefit, they will get less of the other. In this way, technological spillover and private benefits are two separate goods that the officials have to choose given the budget constraint that they have to attract FDI.
+Firms share the benefit with the official in the form of a two-good bundle: 1) technological spillover and, 2) private benefit (to the official). \textit{Technological spillover} is the beneficial effects of foreign firms' technological knowledge on the productivity and innovative ability of private firms. The official cares about the technological spillover of FDI because it is a crucial ingredient in improving total factor productivity and generating long-term growth, which in turn, brings electoral or career benefits. \textit{Private benefit} that firms offer to the official can come in many forms, both illegal (e.g. bribe, kickback) and legal (e.g. campaign finance contribution, informal network with foreign firms that leads to contracts for friends and families).
 
-(Basically the ``budget'' comes from the fact that the country's endowment is turn into profit to the firm. When the firm makes profit, it can use part of that profit to pay for either private benefits of technological spillover.)
+The essence of the dissertation project is to determinte how the official chooses the mix of these two goods, i.e. technological spillover and private benefit.
 
-The location of the budget constraint depends on the endowment of the official. The better endowment the official has, the budget constraint shifts to the right, meaning that he will be able to get both more technological spillover and more private benefits. For example, in \Cref{fig:budget_constraint}, the official with more endowment has the budget constraint on the right. As we can see, he is capable of attaining the $(s_2, b_2)$ bundle, with both $s_2 > s_1$ and $b_2 > b_1$.
+\subsection{Government official faces a budget constraint}
+
+There are two reasons why there exists a budget constraint that prevents the official from getting as much spillover and private benefit as he wants.
+
+First, since the endowment that the official commands is finite, it imposes a constraint on the amount of FDI that the official can attract.
+
+Second, given a fixed amount of FDI, there is a trade-off between spillover and private benefit. In other words, if the official wants more of one good, he has to give up some of the other. To induce spillover, governments frequently impose on foreign firms conditions such as forming a joint venture or local content requirement. These conditions constrain firms' options and their ability to optimally use their physical and management capital, reducing their revenue and profitability. Similarly, when firms are forced to offer private benefit to officials (e.g. bribes, contracts with officials' relatives), they suffer from both an upfront cost as well as the cost of uncertainty (as these private benefits are frequently informal, not transparently encoded, and thus abstruse to foreign firms). For this reason, offering officials private benefit increases firms' expenses and thus also reduces profitability. Given that firms are constrained have to maintain a minimum amount of profit (akin to reservation wage) that justifies investing in the country, if a firm offers more private benefit to the official it will have to bring less technological spillover, and vice versa.
+
+One may argue that there are foreign firms that voluntarily produce spillover and this is not mutually exclusive from offering private benefit to the officials. However, this is rare because high-tech firms are wont to keep their technology proprietary. Due to scale and sophistication, foreign firms would also source from established international suppliers and only rely on local suppliers for standard commodity goods at arms-length, which doesn't generate as much spillover from personal contact (e.g. training, quality assurance assistance, financing assistance). By definition, FDI firms voluntarily source from local suppliers only when the availability and quality of local suppliers are not far from international quality, and in these cases there's less need and room for spillover. The only case that spillover happens is when the foreign firms specifically target the local market: in this case, the qualilty is not too stringent, quantity not too large, and there is a need for rapid local customization. However, in this case, local-market-targeting FDI firms can displace local firms, and the benefit of spillover is offset and can lead to negative spillover (cite).
+
+Combining the two facts that, 1) the size of the bundle is limited by the official's endowment, and 2) the official has to give up one good to get more of the other from firms, a budget constraint exists over this two-good bundle.
+
+While FDI does bring other benefits, e.g. jobs and capital, the theory intentionally focuses on technological spillover and private benefit for both substantive and theoretical reasons. Substantively, technological spillover increases total factor productivity, which is key to sustaining long-term economic growth when capital has diminishing return. While the literature has mainly focused on the quantity of FDI attracted, development agencies and governments have paid much attention to the issue of technological spillover. 
+
+Furthermore, the implication of a spillover-vs-private-benefit trade-off is very different from that of a spillover-vs-capital/job trade-off. In the later case, one can count on the official to shift towards attracting FDI with high technological spillover as his country gradually grows and is in less immediate need of capital and job creation. The growth trajectory of a country is guaranteed to be positive in this scenario, fueled by FDI's capital injection in the earlier stage and sustained by FDI's technological transfer in the later stage. However, if the trade-off that the official considers is between spillover and private benefit as our project theorizes, then one cannot count on the official to take such benevolent action.
+
+Theoretically, since technological spillover is key to growth, our theory about the official choosing the spillover-vs-private-benefit bundle speaks to the age-old research question: ``Why are some governments corrupt, some growth-promoting, and yet others are both?'' While such question is massive both in its importance and its difficulties, our project approach FDI's spillover effect as a mid-size problem with several mid-level theories, where the model of an official considering the mix of benefits brought by a FDI project is not too abstract from the real-world investment process as to be fictional. With the theory well delineated within the topic of FDI, we can pinpoint the parameters that affect the budget constraint and the official's preference over spillover and private benefit as follows.
+
+\subsection{Parameter 1: Official's endowment determines the size of the budget constraint}
+
+Since the official uses his endowment to attract FDI, with more endowment the official will be able to get both more technological spillover and more private benefits. In other words, his budget constraint will shift to the right (\Cref{fig:budget_constraint}). This feature of the model captures the fact that officials in a country with a lot of endowment have a much better bargaining leverage vis-a-vis the foreign firms and can extract both spillover and private benefit (e.g. China).
 
 \begin{figure}[!ht]
 	\centering
     \includegraphics[width=0.75\textwidth, height=0.75\textheight,keepaspectratio]{../figure/budget_constraint}
-    \caption{Budget constraint}
+    \caption{When an official has more endowment, his budget constraint shifts from left to right. He is now able to afford the $(s_2, b_2)$ bundle, with $s_2 > s_1$ and $b_2 > b_1$.}
     \label{fig:budget_constraint}
 \end{figure}
 
-\subsection{Relative price (slope of the budget constraint)}
+\subsection{Parameter 2: price of spillover and private benefit determines the intercept and the slope of the budget constraint}
 
-The intercepts of the budget constraint is determined by the ``price'' of the two goods, i.e. how easily the official can obtain technological spillover and private benefit from the foreign investors.
+Given a fixed amount of endowment, the two intercepts of the budget constraint are determined by the ``price'' of the two goods, i.e. how easily the official can obtain technological spillover and private benefit from the foreign investors. If a good becomes harder to extract from foreign firms, the official can afford less of it and the corresponding intercept shifts inward (\Cref{fig:relative_price}). Alternatively, we can think of the slope of the budget constraint as the relative price of the two goods.
 
-The ``price'' of technological spillover would be the absorptive capacity of the local economy, which I argue to be the presence of private firms that are able to absorb technology from foreign firms. This absorption can happen via two channels. First, private firms enter into the supply chain of the foreign firms, thus subject to higher standards of foreign firms and can also imitate the foreign firms' management techniques via exposure. Second, local employees employed by foreign firms may learn from the experience in the foreign firms and take that knowledge when they transfer to local firms. This channel also requires the presence of private firms that are able to compete with foreign firms for these high quality labor.
+Substantively, the ``price'' of technological spillover depends on both the nature of the sector as well as the absorptive capacity of the local economy, which I argue to be the presence of private firms that are able to absorb technology from foreign firms.\footnote{I define \textit{private firms} as firms with over 50\% ownership belonging to private domestic individuals, companies, or organizations} Consider two channels through which technological spillover happens. First, private firms enter into the supply chain of foreign firms, improving their productivity by imitating the higher production standards or management techniques of foreign firms. For this to happen, it is necessary to have a wealth of private firms that are technologically capable to enter the supply chain. The feasibility of such outsourcing is also sector-specific, e.g. whether the production process is divisible into units, or whether the technology has matured enough for subcontracting. Second, local employees employed by foreign firms may learn from their experience and transfer that knowledge when they move to private firms. For this to happen, private firms must also be technically advanced enough to make use of and compete for this high quality labor from the foreign sector.
 
-The ``price'' of private benefit would be how easily the government officials can extract these benefits from the foreign firms. This parameter would capture real world elements such as the background of the firm. For example, firms that come from countries where corruption is more prominent or accepted would have a higher propensity to bribe. Or if firms come from countries who have signed onto the OECD anti bribery conventions would be more hesitant to bribe, given the punishment that they may face from their home governments for bribing.
+The ``price'' of private benefit substantively means how easily the government officials can extract these benefits from the foreign firms. One example of such parameter is the origin of the foreign firm. Firms that come from countries where corruption is more common or accepted would be more adept at providing private benefit to official and more willing to do. In contrast, firms from countries that have signed onto the OECD anti-bribery convention would be more hesitant to bribe given the punishment that they may face from their home governments.
 
-Together, these two prices determine the slope of the budget constraint. See \Cref{fig:relative_price}
+Changing prices of the two goods will shift the budget constraint and, holding the indifference curve constant, have implications for the mix of two goods that the official chooses.
 
 \begin{figure}[!ht]
 	\centering
     \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/absorptive_capacity}
-    \caption{Relative price of spillover and rent}
+    \caption{In the left panel, the intercept for private benefit moves from the right to the left as its price increases. In other words, $\frac{E}{p_{b2}} < \frac{E}{p_{b1}}$ because $p_{b2} > p_{b1}$. Similarly, in the right panel, as it becomes more difficult to extract spillover from foreign firms, the intercept moves down.}
     \label{fig:relative_price}
 \end{figure}
 
-\subsection{Indifference curve}
+\subsection{Parameter 3: The official's time horizon determines the shape of his indifference curve}
 
-The official has a convex indifference curve, meaning that there is decreasing marginal utility to both spillover and private benefit. This assumption is standard and makes intuitive sense. As the official accumulates more and more private benefit, there are fewer and fewer things to spend them on, his consumption is satiated and produces less utility. Similarly, when more and more technological spillover happens, it becomes less of a bottleneck to the economy, thus voters (or higher-ups) may be come less concerned, and it brings less electoral (or promotional) benefits.
+The official has a convex indifference curve, meaning that there is decreasing marginal utility to both spillover and private benefit. This assumption is standard and makes intuitive sense. As the official accumulates more private benefit, there are fewer things worth spending on as his consumption is satiated and produces less utility. Similarly, when more technological spillover happens, it becomes less of a bottleneck to the economy. Thus, voters (or the official's higher-ups) become less concerned with the issue and it brings less electoral (or career) benefits.
 
-The shape of the indifference curve denotes the relative weight the official assigns to the two goods, spillover and private benefit. When the curve is steep, it means that the official is willing to trade a lot of spillover for a small increase in private benefit. Vice versa, a flatter curve indicates that the official values spillover more.
+The shape of the indifference curve denotes the relative weight the official assigns to the two goods, spillover and private benefit. When the curve is steep, it means that the official is willing to trade a lot of spillover for a small increase in private benefit. Vice versa, a flatter curve indicates that the official values spillover more (\Cref{fig:indifference_curve}).
 
-Politically, the steepness of the indifference curve depends on the time horizon of the official. This is because technological spillover takes time to happen and leads to increase in economic growth, whereas private benefit is immediate. The longer time horizon does the official have, the more heavily does he weigh technological spillover effect. In \Cref{fig:indifference_curve}, the blue indifference is flatter and signifies more weight assigned to spillover effect. As we can see, the official does choose a bundle that has more spillover effect than private benefits.
+Politically, the steepness of the indifference curve depends on the time horizon of the official. This is because technological spillover takes time to happen and to increase economic growth whereas private benefit is immediate. The longer the time horizon, the more heavily does he weigh technological spillover effect. For example, in \Cref{fig:indifference_curve}, the blue indifference curve is flatter and signifies more weight assigned to spillover. In that case, the official does choose a bundle that has more spillover and less private benefit (i.e. $s_1 > s_2$ and $b_1 < b_2$). Political factors that influence the official's time horizon may include term limit, the stability of the regime, or the probability of electoral success. 
 
 \begin{figure}[!ht]
 	\centering
     \includegraphics[width=0.75\textwidth, height=0.75\textheight,keepaspectratio]{../figure/indifference_curve}
-    \caption{Time horizon and the shape of the indifference curve}
+    \caption{The blue indifference curve shows that the longer the official's time horizon, the flatter his indifference curve, and he will choose more spillover and less private benefit.}
     \label{fig:indifference_curve}
 \end{figure}
 
-What affects this time horizon? Term limits, the stability of the regime, the probability of electoral success.
+\subsection{Literature on corruption and FDI}
 
-\subsection{Implication}
+Regarding private benefit for the officials, I focus on corruption, i.e. bribe and informal fees, given the ubiquity of the practice in developing markets and wealth of data collected on this issue from cross-national business surveys. The majority of literature on the relationship between corruption and FDI focuses on showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. (Summarize a bit here) 
+
+But what about foreign firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, and professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. In these works, corruption between the host government and the foreign firm has been conceptualized as \textit{predatory}.
+
+My research offers a new perspective, recognizing that, compared to domestic firms, foreign firms always have the freedom to move out of the country or at least stop bringing in capital. Therefore, the exchange between the government and foreign firms are always more voluntary compared to private firms.\footnote{There is an argument about FDI being harder to relocate, and thus subject to creeping expropriation. However, corruption doesn't tend to change that quickly, and a foreign investor looks into a country knows relatively well the level of corruption that they are getting involved with.} In this angle, corruption between the government and the foreign firm can be \textit{collusive}, with government officials getting bribe and foreign firms getting advantages over domestic firms (e.g. an expedited bureaucracy or privileged use of public resources) \citep{Hellman2002}. Indeed, there are evidence of foreign firms bribing to get an upper hand in the local market\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. 
+
+Such collusive corruption between the government and foreign firm can be the key to explain the puzzle why governments may want to attract a lot of FDI despite the lack of developmental impact. One may say that (corrupt) institutions matter, but not only to \textit{how much} FDI a country can attract as the literature has studied, but also \textit{which kind}.
+
+
+\subsection{Empirical Implications}
+
+In the sections that follow, I contextualize the general theory presented above, building three mid-level theories that map each of the three parameters to a specific empirical context. Specifically,
+
+\begin{itemize}
+\item \textit{``price'' of spillover}: sectoral variation (primary, manufacturing, and service) in the level of potential absorptive capacity.
+
+\item \textit{``price'' of private benefit}: Phase 3 enforcement of OECD's anti-bribery convention makes firms from member countries more hesitant to bribe
+
+\item \textit{time horizon}: term limit reduces the time horizon of Vietnamese provincial officials that are close to retirement
+\end{itemize}
